<resources>
    <string name="app_name">Naura App</string>

    <string name="action_settings">Настройки</string>
    <string name="title_activity_create_object">Новый Объект</string>

    <!--Tab strings-->
    <string name="owner_info">Владелец</string>
    <string name="object_info">Объект</string>
    <string name="pictures">Картинки</string>

    <string name="owner_name">ФИ владельца</string>
    <string name="owner_phone">Телефон</string>
    <string name="other_contacts">Другие методы связи</string>

    <string name="agent_number">Номер агента</string>
    <string name="community">Община</string>
    <string name="city">Город или поселок</string>
    <string name="building_date">Год постройки</string>
    <string name="sea_distance">Удаленность от моря</string>
    <string name="object_area">Площадь объекта</string>
    <string name="object_land_area">Площадь земли или двора</string>
    <string name="land_marks">Ориентиры</string>
    <string name="bedrooms_count">Количество спален</string>
    <string name="floors">Этажность или этаж</string>
    <string name="neighbors">Кто соседи</string>
    <string name="ko">KO</string>
    <string name="real_estate_list_number">Номер листа недвижимости</string>
    <string name="flat_pd">PD* для квартир</string>
    <string name="object_type">Тип объекта</string>
        <string name="object_type_land">Земля</string>
        <string name="object_type_house">Дом</string>
        <string name="object_type_flat">Квартира</string>
        <string name="object_type_office">Оффис</string>
        <string name="object_type_hotel">Отель</string>
    <string name="sea_view">Вид на море</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="amount">Количество</string>
        <string name="bathrooms">туалетов</string>
        <string name="halls">залов</string>
        <string name="bedrooms">спален</string>
        <string name="kitchens">кухонь</string>
    <string name="object_material_type">Объект построен из</string>
    <string name="fasad_type">Вид фасада</string>
    <string name="roof">Крыша</string>
    <string name="windows">Окна</string>
    <string name="object_documents">Объект</string>
    <string name="license">Легальность</string>
    <string name="wetness">Влага</string>
    <string name="television">ТВ</string>
    <string name="floor">пол</string>
    <string name="terrace">Tepaса</string>
    <string name="electricity">Электричество</string>
    <string name="water">Вода</string>
    <string name="waste_water">Канализация</string>
    <string name="heat_type">Тип отопление</string>
    <string name="garage">Гараж</string>
    <string name="basement">Подвал</string>
    <string name="supply_object">Вспомогательные объекты</string>
    <string name="water_supply">Вид водоснабжения</string>
    <string name="waste_water_disposal">Вид канализации</string>
    <string name="water_container">Резервуар для воды</string>
    <string name="parking">Паркинг</string>
    <string name="lift">Лифт</string>
    <string name="phone_availability">Телефон</string>
    <string name="interphone">Интерфон</string>
    <string name="video_recording">Видео наблюдение</string>
    <string name="pool">Бассейн</string>
    <string name="pool_construction_site">можно строить бассейн</string>
    <string name="terrace_fence">Ограда терасы</string>
    <string name="garden_fence">Ограда двора</string>
    <string name="furniture_available">Продается с мебелью</string>
    <string name="others">Другое</string>
    <string name="ok_btn">Принять</string>
    <string name="cancel_btn">Отмена</string>
    <string name="object_structure">Структура объекта</string>
    <string name="object_info_kadastr">зарегистрирован в кадастре</string>
    <string name="object_info_not_full">не полностью зарегистрирован</string>
    <string name="object_info_not_registered">не зарегистрирован</string>
    <string name="info_not_legal">нет разрешение</string>
    <string name="info_all_legal">разрешение есть не на все</string>
    <string name="info_half_legal">есть разрешение</string>
    <string name="tv_satelite">спутник</string>
    <string name="tv_kabel">кабельное</string>
    <string name="terrace_area">площадь терасы m2</string>
    <string name="garage_area">площадь гаража m2</string>
    <string name="basement_area">площадь подвала m2</string>
    <string name="supply_area">площадь m2</string>
    <string name="water_supply_city">городское</string>
    <string name="water_supply_well">колодец</string>
    <string name="water_supply_source">источник</string>
    <string name="water_supply_brought">привозная</string>
    <string name="waster_water_disposal_city">городская</string>
    <string name="waster_water_disposal_septic">септик</string>
    <string name="parking_place_amount">количество паркинг мест</string>
    <string name="pool_size">емкость бассейна m3</string>
    <string name="garden_fence_type">вид ограды</string>
    <string name="object_photos">Фото</string>
    <string name="make_photo">Сделать фото</string>

    <string name="price">Цена</string>
    <string name="no_connection_title">Нет связи с интернетом</string>
    <string name="no_connection_message">Данные будут сохраненны локально.\n \n
        Вы сможете их отправить когда будете в сети. \n \n
        Для этого в главном окне программы нажмите кнопку resend.
    </string>
    <string name="user_name">Ваше имя</string>
    <string name="user_id">Ваш номер</string>
    <string name="new_user_dialog_title">Регистрация</string>
</resources>
