<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/basement"
                android:id="@+id/textView13"
                android:layout_column="0"
                android:layout_weight="0.1" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:id="@+id/basement"
                android:orientation="vertical"
                android:layout_weight="0.5">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:id="@+id/basement_yes"
                    android:checked="false"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:id="@+id/basement_no"
                    android:checked="false"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/basement_area"
                        android:layout_column="1"
                        android:layout_weight="0.5" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/basement_area"
                        android:id="@+id/textView14"
                        android:layout_column="0"
                        android:layout_weight="0.5"
                        android:textSize="10sp" />
                </RadioGroup>
            </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/supply_object"
                android:id="@+id/textView18"
                android:layout_column="0"
                android:layout_weight="0.1"
                android:textSize="12sp" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:id="@+id/supply_object"
                android:orientation="vertical"
                android:layout_weight="0.5" >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:id="@+id/supply_yes"
                    android:checked="false"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:id="@+id/supply_no"
                    android:checked="false"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/supply_area"
                    android:layout_column="1"
                    android:layout_weight="0.5" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/supply_area"
                    android:id="@+id/textView19"
                    android:layout_column="0"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/water_supply"
                android:id="@+id/textView20"
                android:layout_column="0"
                android:layout_weight="0.1" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:id="@+id/water_supply"
                android:orientation="vertical"
                android:layout_weight="1" >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/water_supply_city"
                    android:id="@+id/water_supply_city"
                    android:checked="false"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/water_supply_well"
                    android:id="@+id/water_supply_well"
                    android:checked="false"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/water_supply_source"
                    android:id="@+id/water_supply_source"
                    android:checked="false"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/water_supply_brought"
                    android:id="@+id/water_supply_brought"
                    android:checked="false"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/waste_water_disposal"
                android:id="@+id/textView21"
                android:layout_column="0"
                android:layout_weight="0.1" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:id="@+id/waste_water_disposal"
                android:orientation="vertical"
                android:layout_weight="1" >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/waster_water_disposal_city"
                    android:id="@+id/waster_water_disposal_city"
                    android:checked="false"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/waster_water_disposal_septic"
                    android:id="@+id/waster_water_disposal_septic"
                    android:checked="false"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />

            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/water_container"
                android:id="@+id/textView22"
                android:layout_column="0"
                android:layout_weight="0.1" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:id="@+id/water_container"
                android:orientation="horizontal"
                android:layout_weight="1" >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:id="@+id/water_container_yes"
                    android:checked="false"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:id="@+id/water_container_no"
                    android:checked="false"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/parking"
                android:id="@+id/textView23"
                android:layout_column="0"
                android:layout_weight="0.1" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:id="@+id/parking"
                android:orientation="vertical"
                android:layout_weight="0.5" >



                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:id="@+id/parking_yes"
                    android:checked="false"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:id="@+id/parking_no"
                    android:checked="false"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/parking_place_amount"
                    android:layout_column="1"
                    android:layout_weight="0.5" />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/parking_place_amount"
                    android:id="@+id/textView24"
                    android:layout_column="0"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />
            </RadioGroup>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lift"
                android:id="@+id/textView22"
                android:layout_column="0"
                android:layout_weight="0.1" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:id="@+id/lift"
                android:orientation="horizontal"
                android:layout_weight="1" >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:id="@+id/lift_yes"
                    android:checked="false"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:id="@+id/lift_no"
                    android:checked="false"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />
            </RadioGroup>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/phone_availability"
                android:id="@+id/textView22"
                android:layout_column="0"
                android:layout_weight="0.1" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:id="@+id/phone_availability"
                android:orientation="horizontal"
                android:layout_weight="1" >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:id="@+id/phone_yes"
                    android:checked="false"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:id="@+id/phone_no"
                    android:checked="false"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />
            </RadioGroup>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/interphone"
                android:id="@+id/textView22"
                android:layout_column="0"
                android:layout_weight="0.1" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:id="@+id/interphone"
                android:orientation="horizontal"
                android:layout_weight="1" >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:id="@+id/interphone_yes"
                    android:checked="false"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:id="@+id/interphone_no"
                    android:checked="false"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />
            </RadioGroup>
        </TableRow>
    </TableLayout>
</LinearLayout>