<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/video_recording"
                android:id="@+id/textView22"
                android:layout_column="0"
                android:layout_weight="0.1"
                android:textSize="12sp" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:id="@+id/radioGroup7"
                android:orientation="horizontal"
                android:layout_weight="1" >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:id="@+id/video_recording_yes"
                    android:checked="false"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:id="@+id/video_recording_no"
                    android:checked="false"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />
            </RadioGroup>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pool_construction_site"
                android:id="@+id/textView22"
                android:layout_column="0"
                android:layout_weight="0.1"
                android:textSize="12sp" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:id="@+id/radioGroup7"
                android:orientation="horizontal"
                android:layout_weight="1" >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:id="@+id/pool_construction_site_yes"
                    android:checked="false"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:id="@+id/pool_construction_site_no"
                    android:checked="false"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />
            </RadioGroup>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pool"
                android:id="@+id/textView23"
                android:layout_column="0"
                android:layout_weight="0.1" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:id="@+id/radioGroup8"
                android:orientation="vertical"
                android:layout_weight="0.5" >



                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:id="@+id/pool_yes"
                    android:checked="false"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:id="@+id/pool_no"
                    android:checked="false"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/pool_size"
                    android:layout_column="1"
                    android:layout_weight="0.5" />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/pool_size"
                    android:id="@+id/textView24"
                    android:layout_column="0"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />
            </RadioGroup>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/furniture_available"
                android:id="@+id/textView22"
                android:layout_column="0"
                android:layout_weight="0.1"
                android:textSize="12sp" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:id="@+id/radioGroup7"
                android:orientation="horizontal"
                android:layout_weight="1" >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:id="@+id/furniture_available_yes"
                    android:checked="false"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:id="@+id/furniture_available_no"
                    android:checked="false"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />
            </RadioGroup>
        </TableRow>


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/terrace_fence"
                android:id="@+id/textView7"
                android:layout_column="0"
                android:layout_weight="0.5" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/terrace_fence"
                android:layout_column="1"
                android:onClick="openDialog"
                android:layout_weight="1" />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/garden_fence"
                android:id="@+id/textView23"
                android:layout_column="0"
                android:layout_weight="0.1" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:id="@+id/radioGroup8"
                android:orientation="vertical"
                android:layout_weight="0.5" >



                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:id="@+id/garde_fence_yes"
                    android:checked="false"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:id="@+id/garde_fence_no"
                    android:checked="false"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/garden_fence_type"
                    android:layout_column="1"
                    android:layout_weight="0.5" />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/garden_fence_type"
                    android:id="@+id/textView24"
                    android:layout_column="0"
                    android:layout_weight="0.5"
                    android:textSize="10sp" />
            </RadioGroup>
        </TableRow>
    </TableLayout>
</LinearLayout>